syntax = "proto3";

package test;

message GreetRequest {
  string Hello = 1;
}


message GreetResponse {
  string Goodbye = 1;
}

service GreetService {
  rpc Greetings(GreetRequest) returns (GreetResponse) {} ;
}